# clauseguard

./: .gitignore  CITATION.cff  PAPER.md  README.md  pyproject.toml  requirements.txt
configs/: base.yaml  fever.yaml  halueval.yaml  medhall.yaml
docs/: ARCHITECTURE.md  novelty_audit.md  research_plan.md
experiments/: adversarial_eval.py  eval_factscore.py  eval_halueval.py  eval_medhall.py  recourse_eval.py  sat_receipt_demo.py  train_fever.py
scripts/: aggregate_results.py  download_datasets.sh  extract_triples.py  run_all_seeds.sh  save_verifier.py
src/clauseguard/: __init__.py
src/clauseguard/builders/: __init__.py  subword_dep_evidence.py
src/clauseguard/data/: __init__.py  factscore.py  fever.py  halueval.py  medhall.py
src/clauseguard/eval/: __init__.py  adversarial.py  logger.py  metrics.py
src/clauseguard/extraction/: __init__.py  qwen_extractor.py  triple_extractor.py
src/clauseguard/graphs/: __init__.py  binarize.py  claim_graph.py  dual_graph.py  evidence_graph.py
src/clauseguard/recourse/: __init__.py  candidates.py  output.py  search.py
src/clauseguard/tm/: __init__.py  distillation.py  ensemble.py  graphtm_verifier.py
src/clauseguard/utils/: __init__.py  io.py  seeding.py
src/clauseguard/verify/: __init__.py  certificate.py  sat_encoder.py
tests/: conftest.py  test_eval.py  test_extraction.py  test_graphs.py  test_integration.py  test_recourse.py  test_subword_dep_evidence.py  test_verify.py
