[project]
name = "clauseguard-llm-graphtm"
version = "0.1.0"
description = "Interpretable verification of LLM outputs via dual-graph Tsetlin Machines with SAT-verifiable clause receipts and counterfactual evidence recourse."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = [
    "Tsetlin Machine",
    "Graph Tsetlin Machine",
    "LLM verification",
    "hallucination detection",
    "interpretable AI",
    "EU AI Act",
    "knowledge graph fact verification",
    "counterfactual recourse",
    "SAT verification",
    "neuro-symbolic AI",
]
authors = [
    { name = "Anwar (University of Agder)" }
]
dependencies = [
    "numpy>=1.26,<2",
    "scipy>=1.12",
    "scikit-learn>=1.4",
    "GraphTsetlinMachine==0.3.3",
    "tmu>=0.8.3",
    "torch>=2.6",
    "transformers>=4.50",
    "datasets>=3.6",
    "spacy>=3.8",
    "networkx>=3.3",
    "python-sat>=1.8.dev14",
    "pyyaml>=6.0",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=4.1"]
adversarial = ["textattack>=0.3.10"]

[project.urls]
Source = "https://github.com/<your-org>/clauseguard-llm-graphtm"
Citation = "./CITATION.cff"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-ra -q"

# Install instructions:
#   pip install -e .              # classic
#   uv pip install -e .           # ~10-100x faster (recommended)
#   uv pip sync requirements.txt  # exact-pinned reproduction
#
# For the GPU build of PyTorch (CUDA 12.4):
#   pip install -e . --index-url https://download.pytorch.org/whl/cu124
